--- a/writedown/npt-neq/alanine.tex
+++ b/writedown/npt-neq/alanine.tex
@@ -355,7 +355,7 @@ for $t \geq t_{warm}$.
     $B_1 = \{(\phi, \psi) | -110^\circ \leq \phi <  13^\circ,   74^\circ \leq \psi < 235^\circ\}$,
     $B_2 = \{(\phi, \psi) |  128^\circ \leq \phi < 250^\circ,   74^\circ \leq \psi < 235^\circ\}$,
     $C   = \{(\phi, \psi) |   13^\circ \leq \phi < 128^\circ, -180^\circ \leq \psi < 180^\circ\}$.
-    Considering the angular periodicity, The angle, for example, $226^\circ$ corresponds to $-134^\circ$
+    Considering the angular periodicity, the angle, for example, $226^\circ$ corresponds to $-134^\circ$
     on the plot (b) and (c).
     % Considering the angular periodicity, if we write, for example,
     % $128^\circ \leq \phi <-134^\circ$, it implies that $\phi$ is in a range of $98$ degrees, between $128^\circ$ and $226^\circ$ ($226^\circ$ correspond to $-134^\circ$).
@@ -1124,7 +1124,7 @@ A.~Vogel, N.~Linz, S.~Freidank, and G.~Paltauf.
 \bibitem{vitalini2013speed}
 F.~Vitalini, A.S.J.S. Mey, F.~No\'e, and B.G. Keller.
 \newblock The speed of force fields.
-\newblock {\em unpublished}, 2013.
+\newblock {\em private communication}, 2013.
 
 \end{thebibliography}
 
