revise on the way

--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -1,6 +1,127 @@
 % This file was created with JabRef 2.8.
 % Encoding: ISO8859_1
 
+@ARTICLE{mackerell2004extending,
+  author = {MacKerell, Alexander D and Feig, Michael and Brooks, Charles L},
+  title = {Extending the treatment of backbone energetics in protein force fields:
+	Limitations of gas-phase quantum mechanics in reproducing protein
+	conformational distributions in molecular dynamics simulations},
+  journal = {Journal of computational chemistry},
+  year = {2004},
+  volume = {25},
+  pages = {1400--1415},
+  number = {11},
+  file = {mackerell2004extending.pdf:mackerell2004extending.pdf:PDF},
+  publisher = {Wiley Online Library},
+  timestamp = {2013.10.14}
+}
+
+@article{jorgensen1983comparison,
+  title={Comparison of simple potential functions for simulating liquid water},
+  author={Jorgensen, William L and Chandrasekhar, Jayaraman and Madura, Jeffry D and Impey, Roger W and Klein, Michael L},
+  journal={The Journal of chemical physics},
+  volume={79},
+  number={2},
+  pages={926--935},
+  year={1983},
+  publisher={AIP Publishing}
+}
+
+@ARTICLE{foloppe2000all,
+  author = {Foloppe, Nicolas and MacKerell Jr, Alexander D},
+  title = {All-atom empirical force field for nucleic acids: I. Parameter optimization
+	based on small molecule and condensed phase macromolecular target
+	data},
+  journal = {Journal of Computational Chemistry},
+  year = {2000},
+  volume = {21},
+  pages = {86--104},
+  number = {2},
+  file = {foloppe2000all.pdf:foloppe2000all.pdf:PDF},
+  publisher = {Wiley Online Library},
+  timestamp = {2014.02.17}
+}
+
+@ARTICLE{bjelkmar2010implementation,
+  author = {Bjelkmar, P\"{a}r and Larsson, Per and Cuendet, Michel A and Hess,
+	Berk and Lindahl, Erik},
+  title = {Implementation of the CHARMM force field in GROMACS: Analysis of
+	protein stability effects from correction maps, virtual interaction
+	sites, and water models},
+  journal = {Journal of Chemical Theory and Computation},
+  year = {2010},
+  volume = {6},
+  pages = {459--466},
+  number = {2},
+  file = {bjelkmar2010implementation.pdf:bjelkmar2010implementation.pdf:PDF},
+  publisher = {ACS Publications},
+  timestamp = {2013.10.14}
+}
+
+@ARTICLE{hess1997lincs,
+  author = {Hess, B. and Bekker, H. and Berendsen, H.J.C. and Fraaije, J.G.E.M.},
+  title = {{LINCS: a linear constraint solver for molecular simulations}},
+  journal = {Journal of Computational Chemistry},
+  year = {1997},
+  volume = {18},
+  pages = {1463--1472},
+  number = {12},
+  file = {hess1997lincs.pdf:hess1997lincs.pdf:PDF},
+  owner = {wanghan},
+  publisher = {Citeseer},
+  review = {LINCS},
+  timestamp = {2010.05.13}
+}
+
+@ARTICLE{miyamoto2004settle,
+  author = {Miyamoto, S. and Kollman, P.A.},
+  title = {{SETTLE: an analytical version of the SHAKE and RATTLE algorithm for
+	rigid water models}},
+  journal = {Journal of Computational Chemistry},
+  year = {2004},
+  volume = {13},
+  pages = {952--962},
+  number = {8},
+  file = {miyamoto2004settle.pdf:miyamoto2004settle.pdf:PDF},
+  publisher = {John Wiley \& Sons},
+  timestamp = {2010.05.13}
+}
+
+@ARTICLE{darden1993pme,
+  author = {Darden, T. and York, D. and Pedersen, L.},
+  title = {Particle mesh Ewald: An N· log (N) method for Ewald sums in large
+	systems},
+  journal = {The Journal of Chemical Physics},
+  year = {1993},
+  volume = {98},
+  pages = {10089},
+  file = {darden1993pme.pdf:darden1993pme.pdf:PDF},
+  publisher = {AIP}
+}
+
+@ARTICLE{essmann1995spm,
+  author = {Essmann, U. and Perera, L. and Berkowitz, M.L. and Darden, T. and
+	Lee, H. and Pedersen, L.G.},
+  title = {A smooth particle mesh Ewald method},
+  journal = {The Journal of Chemical Physics},
+  year = {1995},
+  volume = {103},
+  pages = {8577},
+  number = {19},
+  file = {essmann1995spm.pdf:essmann1995spm.pdf:PDF}
+}
+
+@ARTICLE{brooks1983deformable,
+  author = {Brooks III, C.L. and Karplus, M.},
+  title = {Deformable stochastic boundaries in molecular dynamics},
+  journal = {The Journal of chemical physics},
+  year = 1983,
+  volume = 79,
+  pages = 6312,
+  file = {brooks1983deformable.pdf:brooks1983deformable.pdf:PDF},
+  timestamp = {2014.01.17}
+}
+
 @INPROCEEDINGS{ciccotti1993theoretical,
   author = {Ciccotti, G. and Pierleoni, C. and Ryckaert, J.P.},
   title = {Theoretical foundation and rheological application of non-equilibrium
