--- a/writedown/npt-neq/alanine.tex
+++ b/writedown/npt-neq/alanine.tex
@@ -283,18 +283,28 @@ the response of observables in nonequilibrium (i.e. under the effect of the EF) 
 and on the size of the  dynamical subregion, provided that they are
 reasonably large.
 
+\recheck{ The proposed temperature control method is very similar to
+  the stochastic boundary condition proposed by Brooks~III and Karplus~\cite{brooks1983deformable}.
+  The only difference is that we do not explicitly consider a boundary
+  region: The system that is divided into a dynamical region (reaction region in their paper) and
+  a thermostated regoin (stochastic buffer region in their paper)
+  is put into a 3-D cubic periodic simulation box.
+} 
+
 \section{Case I: Alanine dipeptide
   under a uniform  constant EF}
 
 \subsection{System settings and simulation protocol}
 The system is set up in a $2.7\times 2.7\times
 2.7\, \textsf{nm}^3$ periodic simulation region, with one alanine dipeptide
-described by the CHARMM27 force field, and dissolved in 644 TIP3P
-water molecules.
+described by the CHARMM27 force field~\cite{foloppe2000all}, and dissolved in 644 TIP3P~\cite{jorgensen1983comparison}
+water molecules.  \recheck{The grid-based energy correction map (CMAP)~\cite{mackerell2004extending}
+for the backbone dihedral angles is also taken into consider.}
 %The EF exserts force $\vect F = q \vect E(t)$ on
 %the partial charge $q$ in the system.
 The size of the  dynamical region is $R_{ex} = 1.0$~nm.
-All simulations are performed by a home-modified GROMACS 4.5~\cite{pronk2013gromacs}.
+All simulations are performed by a home-modified GROMACS~4.5~\cite{pronk2013gromacs} with support to the CHARMM
+force field~\cite{bjelkmar2010implementation}.
 First, an equilibrium NVT simulation at 300~K of
 100~\textsf{ns} was performed with a Langevin thermostat (time-scale
 $\tau_T = 0.5~\textsf{ps}$).  Along the trajectory, configurations were taken every
@@ -303,11 +313,18 @@ MD simulation (if not stated otherwise for specific cases).
 The branching trajectories were integrated by the
 Leap-frog scheme with the aforementioned nonequilibrium
 temperature control technique.  The
-time step was $\Delta t = 0.002~\textsf{ps}$. The short-range
-interaction was smoothed from $0.8$ to $1.0~\textsf{nm}$ by the
-``switch'' method provided by GROMACS.  An energy conserving PME
+time step was $\Delta t = 0.002~\textsf{ps}$.
+\recheck{The short-range
+interaction (van der Waals interaction)
+had the cut-off radius of 1.0~nm, and was smoothed from $0.8$ to $1.0$~nm by the
+``switch'' method provided by GROMACS.
+A energy conserving particle mesh Ewald method (PME)~\cite{darden1993pme, essmann1995spm}
 method was applied to calculate the electrostatic interaction in this
-periodic system. In the thermostated region, the original dynamics was
+periodic system. The the direct space part of PME was cut-offed and smoothed in the
+same way as the van der Waals interaction.}
+\recheck {All hydrogen involving bonds are constrained by LINCS~\cite{hess1997lincs}, expect that
+  the TIP3P water molecules are constrained by SETTLE algorithm~\cite{miyamoto2004settle}.}
+In the thermostated region, the original dynamics was
 coupled to a Langevin thermostat with $\tau_T = 0.1~\textsf{ps}$.
   In all testing cases, this local thermostat is able to control
   the system at the desired temperature, i.e.~300~K (the results
@@ -428,16 +445,24 @@ In the case of oscillatory EF, the behaviour of the net probability flux is also
 \end{align}
 which expresses the cumulative effects due to the action of EF on the conformations of the molecule.
 
-
-
-
+\recheck{ The definition of the probability flux is similar to the
+  kinetic rate.  However, we want to stress that, in genarl, the
+  probability flux should not be interpreted as a kinetic rate, and
+  one cannot replace the nonequilibrium molecular dynamics by a
+  kinetic analysis. The main reason is that the conformational
+  dynamics of alanine dipeptide is generally not Markovian for a small
+  time interval $\Delta t$~\cite{prinz2011markov}, therefore, a direct application of the kinetic
+  analysis is questionable. Since the main goal of our research is to propose a
+  nonequilibrium molecular dynamics simulation method, the numerical
+  results will not be compared with a kinetic analysis.
+}
 
 \subsection{Conformational dynamics}
 
 
 \begin{figure}
   \centering
-  \includegraphics[]{fig-meta-npt.eps}
+  \includegraphics[]{fig.ala.new/fig-meta-npt.eps}
   \caption{The time-dependent probability of conformations $P_I(t)$ 
     when a constant EF is present, where $\sum_I P_I(t) = 1, \forall t$.
     The warm-up time is $t_{warm} = 10$~ps. The red line refers to conformation $I = A_1$,
@@ -449,11 +474,11 @@ which expresses the cumulative effects due to the action of EF on the conformati
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-1.eps}
-  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-2.eps}
-  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-3.eps}
-  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-4.eps}
-  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-5.eps}
+  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-1.eps}
+  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-2.eps}
+  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-3.eps}
+  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-4.eps}
+  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-5.eps}
   \caption{
     The net probability flux for the constant EF case.
     The warm-up time is $t_{warm} = 10$~ps.
@@ -495,7 +520,7 @@ This is a relevant result because it shows the possibility of employing an exter
   \begin{tabular*}{0.4\textwidth}{@{\extracolsep{\fill}}lc}\hline\hline
     Direction        & time scale [ ps ] \\\hline
     $A_1\rightarrow A_2$        &       $\sim 10$      \\
-    $B_1\rightarrow B_2$        &       $\sim 10$      \\    
+    % $B_1\rightarrow B_2$        &       $\sim 10$      \\    
     $B_2\rightarrow A_1,\ A_2,\ C$        &       $\sim 50$      \\    
     $A_2\rightarrow A_1$        &       $\sim 100$      \\
     $B_2\rightarrow B_1$        &       $\sim 100$      \\    
@@ -508,10 +533,15 @@ This is a relevant result because it shows the possibility of employing an exter
 
 
 \subsection{Molecular dipole response}
-The fact that our external perturbation corresponds to the action of an electric field, naturally leads to the question of how the behaviour of the electric dipole moment of the molecule is influenced by the direct interaction with EF, and, in turn, how this is related to the overall conformational behaviour of the molecule reported in the previous section.
+The fact that our external perturbation corresponds to the action of
+an electric field, naturally leads to the question of how
+\recheck{
+  the molecular dipole aligns along the direction of external EF}, and, in turn, how this is related
+to the overall \recheck{conformational selection} of the molecule reported in
+the previous section.
 \begin{figure}
   \centering
-  \includegraphics[width=0.45\textwidth]{fig-dipol-order-conf.eps}
+  \includegraphics[width=0.45\textwidth]{fig.ala.new/field.dipole/fig-dipol-order-conf.eps}
   \caption{The
     $x$-component of the molecular dipole moment, and the orientational order parameter
     of the alanine molecule as a
@@ -673,7 +703,7 @@ alanine does not change or contribute significantly in determining the conformat
 
 \begin{figure}
   \centering
-  \includegraphics[]{fig-meta-conv.eps}
+  \includegraphics[]{fig.ala.new/fig-meta-conv.eps}
   \caption{Testing the finite-size effect on the dynamical and thermostated region.
     Probabilities of different conformations are presented versus time.
     See the text for more details.
@@ -712,8 +742,8 @@ Here we tested three different
 periods 10, 40 and 200~ps.
 \begin{figure}
   \centering
-  \includegraphics[width=0.48\textwidth]{fig-mode2-dipol.eps}
-  \includegraphics[width=0.48\textwidth]{fig-mode2-order.eps}
+  \includegraphics[width=0.48\textwidth]{fig.ala.new/fig-mode2-dipol.eps}
+  \includegraphics[width=0.48\textwidth]{fig.ala.new/fig-mode2-order.eps}
   \caption{Illustration of the effect of the oscillatory EF on the system:
     (a) the dipole moment  and (b) the
     orientational order parameter of alanine dipeptide as a
@@ -756,9 +786,9 @@ weaker than in the case of constant EF.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.32\textwidth]{fig-meta-mode2-0010.eps}
-  \includegraphics[width=0.32\textwidth]{fig-meta-mode2-0040.eps}
-  \includegraphics[width=0.32\textwidth]{fig-meta-mode2-0200.eps}
+  \includegraphics[width=0.32\textwidth]{fig.ala.new/fig-meta-mode2-0010.eps}
+  \includegraphics[width=0.32\textwidth]{fig.ala.new/fig-meta-mode2-0040.eps}
+  \includegraphics[width=0.32\textwidth]{fig.ala.new/fig-meta-mode2-0200.eps}
   % \includegraphics[width=0.49\textwidth]{fig-meta-mode2-2000.eps}
   \caption{The probability of being in a given of conformation for alanine in a   periodically oscillatory EF. Different periods,
     i.e. $\period =10$~ps, 40~ps and 200~ps, are considered here.  The
@@ -775,21 +805,21 @@ weaker than in the case of constant EF.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-1.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-2.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-3.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-4.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-5.eps}\\
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-1.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-2.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-3.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-4.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-5.eps}\\
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-1.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-2.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-3.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-4.eps}
-  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-5.eps}\\
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-1.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-2.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-3.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-4.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-5.eps}\\
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-1.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-2.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-3.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-4.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-5.eps}\\
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-1.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-2.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-3.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-4.eps}
+  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-5.eps}\\
   \caption{
     Integrated probability flux $Q_{J,I}(t)$ for the periodically
     oscillatory EF, is plotted against time (horizontal axis, in picoseconds).
@@ -827,7 +857,7 @@ highly oscillating and the average value over time cycles does not change
 considerably w.r.t.~time.
 However, the probability in conformation $C$ significantly
 increases to approximately 0.17 for $\period =10$~ps, 0.27 for  $\period =40$~ps, and
-0.25 for $\period =200$~ps.
+0.26 for $\period =200$~ps.
 In the case of $\period =10$ and $40$~ps, {the probability of conformation $C$}
 reaches the steady value in around 300~ps, while it requires about 1200~ps
 for the $\period =200$~ps case. 
@@ -955,178 +985,178 @@ are not likely to change significantly as a function of the force field.
   H.W.~and C.S.~thank the financial support by DFG research center MATHEON.
   Funding from the IIT SEED project SIMBEDD and from the SFI Grant 08-IN.1-I1869 is acknowledged by G.C..
 
-% \bibliography{ref}{}
-% \bibliographystyle{unsrt}
+\bibliography{ref}{}
+\bibliographystyle{unsrt}
 
 
-\begin{thebibliography}{10}
+% \begin{thebibliography}{10}
 
-\bibitem{bohr2000microwave}
-Henrik Bohr and Jakob Bohr.
-\newblock Microwave-enhanced folding and denaturation of globular proteins.
-\newblock {\em Physical Review E}, 61(4):4310, 2000.
+% \bibitem{bohr2000microwave}
+% Henrik Bohr and Jakob Bohr.
+% \newblock Microwave-enhanced folding and denaturation of globular proteins.
+% \newblock {\em Physical Review E}, 61(4):4310, 2000.
 
-\bibitem{bohr2000microwave-1}
-Henrik Bohr and Jakob Bohr.
-\newblock Microwave enhanced kinetics observed in ord studies of a protein.
-\newblock {\em Bioelectromagnetics}, 21(1):68--72, 2000.
+% \bibitem{bohr2000microwave-1}
+% Henrik Bohr and Jakob Bohr.
+% \newblock Microwave enhanced kinetics observed in ord studies of a protein.
+% \newblock {\em Bioelectromagnetics}, 21(1):68--72, 2000.
 
-\bibitem{dePomerai2000cell}
-David de~Pomerai, Clare Daniells, Helen David, Joanna Allan, Ian Duce, Mohammed
-  Mutwakil, David Thomas, Phillip Sewell, John Tattersall, Don Jones, and Peter
-  Candido.
-\newblock Cell biology: Non-thermal heat-shock response to microwaves.
-\newblock {\em Nature}, 405:417--418, 2000.
+% \bibitem{dePomerai2000cell}
+% David de~Pomerai, Clare Daniells, Helen David, Joanna Allan, Ian Duce, Mohammed
+%   Mutwakil, David Thomas, Phillip Sewell, John Tattersall, Don Jones, and Peter
+%   Candido.
+% \newblock Cell biology: Non-thermal heat-shock response to microwaves.
+% \newblock {\em Nature}, 405:417--418, 2000.
 
-\bibitem{inskip2001cellular}
-Peter~D Inskip, Robert~E Tarone, Elizabeth~E Hatch, Timothy~C Wilcosky,
-  William~R Shapiro, Robert~G Selker, Howard~A Fine, Peter~M Black, Jay~S
-  Loeffler, and Martha~S Linet.
-\newblock Cellular-telephone use and brain tumors.
-\newblock {\em New England Journal of Medicine}, 344(2):79--86, 2001.
+% \bibitem{inskip2001cellular}
+% Peter~D Inskip, Robert~E Tarone, Elizabeth~E Hatch, Timothy~C Wilcosky,
+%   William~R Shapiro, Robert~G Selker, Howard~A Fine, Peter~M Black, Jay~S
+%   Loeffler, and Martha~S Linet.
+% \newblock Cellular-telephone use and brain tumors.
+% \newblock {\em New England Journal of Medicine}, 344(2):79--86, 2001.
 
-\bibitem{mancinelli2004non}
-Fabrizio Mancinelli, Michele Caraglia, Alberto Abbruzzese, Guglielmo
-  d'Ambrosio, Rita Massa, and Ettore Bismuto.
-\newblock Non-thermal effects of electromagnetic fields at mobile phone
-  frequency on the refolding of an intracellular protein: Myoglobin.
-\newblock {\em Journal of cellular biochemistry}, 93(1):188--196, 2004.
+% \bibitem{mancinelli2004non}
+% Fabrizio Mancinelli, Michele Caraglia, Alberto Abbruzzese, Guglielmo
+%   d'Ambrosio, Rita Massa, and Ettore Bismuto.
+% \newblock Non-thermal effects of electromagnetic fields at mobile phone
+%   frequency on the refolding of an intracellular protein: Myoglobin.
+% \newblock {\em Journal of cellular biochemistry}, 93(1):188--196, 2004.
 
-\bibitem{budi2005electric}
-A.~Budi, F.S. Legge, H.~Treutlein, and I.~Yarovsky.
-\newblock Electric field effects on insulin chain-b conformation.
-\newblock {\em The Journal of Physical Chemistry B}, 109(47):22641--22648,
-  2005.
+% \bibitem{budi2005electric}
+% A.~Budi, F.S. Legge, H.~Treutlein, and I.~Yarovsky.
+% \newblock Electric field effects on insulin chain-b conformation.
+% \newblock {\em The Journal of Physical Chemistry B}, 109(47):22641--22648,
+%   2005.
 
-\bibitem{budi2007effect}
-A.~Budi, F.S. Legge, H.~Treutlein, and I.~Yarovsky.
-\newblock Effect of frequency on insulin response to electric field stress.
-\newblock {\em The Journal of Physical Chemistry B}, 111(20):5748--5756, 2007.
+% \bibitem{budi2007effect}
+% A.~Budi, F.S. Legge, H.~Treutlein, and I.~Yarovsky.
+% \newblock Effect of frequency on insulin response to electric field stress.
+% \newblock {\em The Journal of Physical Chemistry B}, 111(20):5748--5756, 2007.
 
-\bibitem{budi2008comparative}
-Akin Budi, F~Sue Legge, Herbert Treutlein, and Irene Yarovsky.
-\newblock Comparative study of insulin chain-b in isolated and monomeric
-  environments under external stress.
-\newblock {\em The Journal of Physical Chemistry B}, 112(26):7916--7924, 2008.
+% \bibitem{budi2008comparative}
+% Akin Budi, F~Sue Legge, Herbert Treutlein, and Irene Yarovsky.
+% \newblock Comparative study of insulin chain-b in isolated and monomeric
+%   environments under external stress.
+% \newblock {\em The Journal of Physical Chemistry B}, 112(26):7916--7924, 2008.
 
-\bibitem{toschi2008effects}
-Francesca Toschi, Francesca Lugli, Fabio Biscarini, and Francesco Zerbetto.
-\newblock Effects of electric field stress on a $\beta$-amyloid peptide.
-\newblock {\em The Journal of Physical Chemistry B}, 113(1):369--376, 2008.
+% \bibitem{toschi2008effects}
+% Francesca Toschi, Francesca Lugli, Fabio Biscarini, and Francesco Zerbetto.
+% \newblock Effects of electric field stress on a $\beta$-amyloid peptide.
+% \newblock {\em The Journal of Physical Chemistry B}, 113(1):369--376, 2008.
 
-\bibitem{astrakas2011electric}
-Loukas Astrakas, Christos Gousias, and Margaret Tzaphlidou.
-\newblock Electric field effects on chignolin conformation.
-\newblock {\em Journal of Applied Physics}, 109(9):094702--094702, 2011.
+% \bibitem{astrakas2011electric}
+% Loukas Astrakas, Christos Gousias, and Margaret Tzaphlidou.
+% \newblock Electric field effects on chignolin conformation.
+% \newblock {\em Journal of Applied Physics}, 109(9):094702--094702, 2011.
 
-\bibitem{astrakas2012structural}
-Loukas~G Astrakas, Christos Gousias, and Margaret Tzaphlidou.
-\newblock Structural destabilization of chignolin under the influence of
-  oscillating electric fields.
-\newblock {\em Journal of Applied Physics}, 111(7):074702--074702, 2012.
+% \bibitem{astrakas2012structural}
+% Loukas~G Astrakas, Christos Gousias, and Margaret Tzaphlidou.
+% \newblock Structural destabilization of chignolin under the influence of
+%   oscillating electric fields.
+% \newblock {\em Journal of Applied Physics}, 111(7):074702--074702, 2012.
 
-\bibitem{damm2012can}
-Markus Damm, Christoph Nusshold, David Cantillo, Gerald~N Rechberger, Karl
-  Gruber, Wolfgang Sattler, and C~Oliver Kappe.
-\newblock Can electromagnetic fields influence the structure and enzymatic
-  digest of proteins? a critical evaluation of microwave-assisted proteomics
-  protocols.
-\newblock {\em Journal of proteomics}, 75:5533--5543, 2012.
+% \bibitem{damm2012can}
+% Markus Damm, Christoph Nusshold, David Cantillo, Gerald~N Rechberger, Karl
+%   Gruber, Wolfgang Sattler, and C~Oliver Kappe.
+% \newblock Can electromagnetic fields influence the structure and enzymatic
+%   digest of proteins? a critical evaluation of microwave-assisted proteomics
+%   protocols.
+% \newblock {\em Journal of proteomics}, 75:5533--5543, 2012.
 
-\bibitem{starzyk2013proteins}
-A.~Starzyk and M.~Cieplak.
-\newblock Proteins in the electric field near the surface of mica.
-\newblock {\em The Journal of Chemical Physics}, 139:045102, 2013.
+% \bibitem{starzyk2013proteins}
+% A.~Starzyk and M.~Cieplak.
+% \newblock Proteins in the electric field near the surface of mica.
+% \newblock {\em The Journal of Chemical Physics}, 139:045102, 2013.
 
-\bibitem{english2009nonequilibrium}
-N.J. English, G.Y. Solomentsev, and P.~O'Brien.
-\newblock Nonequilibrium molecular dynamics study of electric and low-frequency
-  microwave fields on hen egg white lysozyme.
-\newblock {\em The Journal of chemical physics}, 131:035106, 2009.
+% \bibitem{english2009nonequilibrium}
+% N.J. English, G.Y. Solomentsev, and P.~O'Brien.
+% \newblock Nonequilibrium molecular dynamics study of electric and low-frequency
+%   microwave fields on hen egg white lysozyme.
+% \newblock {\em The Journal of chemical physics}, 131:035106, 2009.
 
-\bibitem{solomentsev2012effects}
-G.Y. Solomentsev, N.J. English, and D.A. Mooney.
-\newblock Effects of external electromagnetic fields on the conformational
-  sampling of a short alanine peptide.
-\newblock {\em Journal of Computational Chemistry}, 33:917--923, 2012.
+% \bibitem{solomentsev2012effects}
+% G.Y. Solomentsev, N.J. English, and D.A. Mooney.
+% \newblock Effects of external electromagnetic fields on the conformational
+%   sampling of a short alanine peptide.
+% \newblock {\em Journal of Computational Chemistry}, 33:917--923, 2012.
 
-\bibitem{ciccotti1975direct}
-G~Ciccotti and G~Jacucci.
-\newblock Direct computation of dynamical response by molecular dynamics: The
-  mobility of a charged lennard-jones particle.
-\newblock {\em Physical Review Letters}, 35(12):789, 1975.
+% \bibitem{ciccotti1975direct}
+% G~Ciccotti and G~Jacucci.
+% \newblock Direct computation of dynamical response by molecular dynamics: The
+%   mobility of a charged lennard-jones particle.
+% \newblock {\em Physical Review Letters}, 35(12):789, 1975.
 
-\bibitem{ciccotti1979thought}
-G.~Ciccotti, G.~Jacucci, and I.R. McDonald.
-\newblock "thought-experiments" by molecular dynamics.
-\newblock {\em Journal of Statistical Physics}, 21(1):1--22, 1979.
+% \bibitem{ciccotti1979thought}
+% G.~Ciccotti, G.~Jacucci, and I.R. McDonald.
+% \newblock "thought-experiments" by molecular dynamics.
+% \newblock {\em Journal of Statistical Physics}, 21(1):1--22, 1979.
 
-\bibitem{ciccotti1993theoretical}
-G.~Ciccotti, C.~Pierleoni, and J.P. Ryckaert.
-\newblock Theoretical foundation and rheological application of non-equilibrium
-  molecular dynamics.
-\newblock In {\em Microscopic simulations of complex hydrodynamic phenomena},
-  pages 25--45. Plenum Press, 1993.
+% \bibitem{ciccotti1993theoretical}
+% G.~Ciccotti, C.~Pierleoni, and J.P. Ryckaert.
+% \newblock Theoretical foundation and rheological application of non-equilibrium
+%   molecular dynamics.
+% \newblock In {\em Microscopic simulations of complex hydrodynamic phenomena},
+%   pages 25--45. Plenum Press, 1993.
 
-\bibitem{palla2008bulk}
-P.L. Palla, C.~Pierleoni, and G.~Ciccotti.
-\newblock Bulk viscosity of the lennard-jones system at the triple point by
-  dynamical nonequilibrium molecular dynamics.
-\newblock {\em Physical Review E}, 78(2):021204, 2008.
+% \bibitem{palla2008bulk}
+% P.L. Palla, C.~Pierleoni, and G.~Ciccotti.
+% \newblock Bulk viscosity of the lennard-jones system at the triple point by
+%   dynamical nonequilibrium molecular dynamics.
+% \newblock {\em Physical Review E}, 78(2):021204, 2008.
 
-\bibitem{orlandini2011hydrodynamics}
-S.~Orlandini, S.~Meloni, and G.~Ciccotti.
-\newblock Hydrodynamics from statistical mechanics: combined dynamical-nemd and
-  conditional sampling to relax an interface between two immiscible liquids.
-\newblock {\em Phys. Chem. Chem. Phys.}, 13:13177--13181, 2011.
+% \bibitem{orlandini2011hydrodynamics}
+% S.~Orlandini, S.~Meloni, and G.~Ciccotti.
+% \newblock Hydrodynamics from statistical mechanics: combined dynamical-nemd and
+%   conditional sampling to relax an interface between two immiscible liquids.
+% \newblock {\em Phys. Chem. Chem. Phys.}, 13:13177--13181, 2011.
 
-\bibitem{orlandini2011hydrodynamics-01}
-Sergio Orlandini, Simone Meloni, and Giovanni Ciccotti.
-\newblock Hydrodynamics from dynamical non-equilibrium md.
-\newblock In {\em AIP Conference Proceedings}, volume 1332, page~77, 2011.
+% \bibitem{orlandini2011hydrodynamics-01}
+% Sergio Orlandini, Simone Meloni, and Giovanni Ciccotti.
+% \newblock Hydrodynamics from dynamical non-equilibrium md.
+% \newblock In {\em AIP Conference Proceedings}, volume 1332, page~77, 2011.
 
-\bibitem{delaHoz2005microwaves}
-Antonio de~la Hoz, Angel Diaz-Ortiz, and Andres Moreno.
-\newblock Microwaves in organic synthesis. thermal and non-thermal microwave
-  effects.
-\newblock {\em Chemical Society Reviews}, 34(2):164--178, 2005.
+% \bibitem{delaHoz2005microwaves}
+% Antonio de~la Hoz, Angel Diaz-Ortiz, and Andres Moreno.
+% \newblock Microwaves in organic synthesis. thermal and non-thermal microwave
+%   effects.
+% \newblock {\em Chemical Society Reviews}, 34(2):164--178, 2005.
 
-\bibitem{pronk2013gromacs}
-S.~Pronk, S.~P{\'a}ll, R.~Schulz, P.~Larsson, P.~Bjelkmar, R.~Apostolov, M.R.
-  Shirts, J.C. Smith, P.M. Kasson, D.~van~der Spoel, and Hess B.~Lindahl E.
-\newblock Gromacs 4.5: a high-throughput and highly parallel open source
-  molecular simulation toolkit.
-\newblock {\em Bioinformatics}, pages 1--10, 2013.
+% \bibitem{pronk2013gromacs}
+% S.~Pronk, S.~P{\'a}ll, R.~Schulz, P.~Larsson, P.~Bjelkmar, R.~Apostolov, M.R.
+%   Shirts, J.C. Smith, P.M. Kasson, D.~van~der Spoel, and Hess B.~Lindahl E.
+% \newblock Gromacs 4.5: a high-throughput and highly parallel open source
+%   molecular simulation toolkit.
+% \newblock {\em Bioinformatics}, pages 1--10, 2013.
 
-\bibitem{parrinello1981polymorphic}
-M.~Parrinello and A.~Rahman.
-\newblock Polymorphic transitions in single crystals: A new molecular dynamics
-  method.
-\newblock {\em Journal of Applied Physics}, 52:7182, 1981.
+% \bibitem{parrinello1981polymorphic}
+% M.~Parrinello and A.~Rahman.
+% \newblock Polymorphic transitions in single crystals: A new molecular dynamics
+%   method.
+% \newblock {\em Journal of Applied Physics}, 52:7182, 1981.
 
-\bibitem{schuette2011markov}
-C.~Sch{\"u}tte, F.~No{\'e}, J.~Lu, M.~Sarich, and E.~Vanden-Eijnden.
-\newblock Markov state models based on milestoning.
-\newblock {\em The Journal of Chemical Physics}, 134:204105, 2011.
+% \bibitem{schuette2011markov}
+% C.~Sch{\"u}tte, F.~No{\'e}, J.~Lu, M.~Sarich, and E.~Vanden-Eijnden.
+% \newblock Markov state models based on milestoning.
+% \newblock {\em The Journal of Chemical Physics}, 134:204105, 2011.
 
-\bibitem{scovell2000phase}
-Dawn~L Scovell, Tim~D Pinkerton, Valentin~K Medvedev, and Eric~M Stuve.
-\newblock Phase transitions in vapor-deposited water under the influence of
-  high surface electric fields.
-\newblock {\em Surface science}, 457(3):365--376, 2000.
+% \bibitem{scovell2000phase}
+% Dawn~L Scovell, Tim~D Pinkerton, Valentin~K Medvedev, and Eric~M Stuve.
+% \newblock Phase transitions in vapor-deposited water under the influence of
+%   high surface electric fields.
+% \newblock {\em Surface science}, 457(3):365--376, 2000.
 
-\bibitem{vogel2008femtosecond}
-A.~Vogel, N.~Linz, S.~Freidank, and G.~Paltauf.
-\newblock Femtosecond-laser-induced nanocavitation in water: implications for
-  optical breakdown threshold and cell surgery.
-\newblock {\em Physical review letters}, 100(3):38102, 2008.
+% \bibitem{vogel2008femtosecond}
+% A.~Vogel, N.~Linz, S.~Freidank, and G.~Paltauf.
+% \newblock Femtosecond-laser-induced nanocavitation in water: implications for
+%   optical breakdown threshold and cell surgery.
+% \newblock {\em Physical review letters}, 100(3):38102, 2008.
 
-\bibitem{vitalini2013speed}
-F.~Vitalini, A.S.J.S. Mey, F.~No\'e, and B.G. Keller.
-\newblock The speed of force fields.
-\newblock {\em private communication}, 2013.
+% \bibitem{vitalini2013speed}
+% F.~Vitalini, A.S.J.S. Mey, F.~No\'e, and B.G. Keller.
+% \newblock The speed of force fields.
+% \newblock {\em private communication}, 2013.
 
-\end{thebibliography}
+% \end{thebibliography}
 
 
 
